#+title: Change log for Emacs-enhanced
#+author: James Dyer
#+email: captainflasmr@gmail.com
#+language: en
#+options: ':t toc:nil author:nil email:nil num:nil title:nil
#+todo: TODO DOING | DONE
#+startup: showall

This document contains the release notes for Emacs-enhanced

* Versions

** <2025-02-16>

Add function to display Git branches in *vc-dir* header line

** <2025-02-05>

Refactor and enhance Ollama integration

- Introduce `ollama-buddy` customization group
- Improve model selection and error handling
- Enhance chat UI with separators and intro message
- Add helper functions for formatting menus and retrieving models
- Refactor process handling and request execution

** <2025-02-04>

Add LLM-powered interactive chat utilities and commands

- Introduced `ollama-send` for streaming responses from the Ollama API.
- Added interactive menu `llm-shell-menu` with commands for chat, code refactoring, proofreading, and more.
- Enabled dynamic model switching and request cancellation.
- Bound `llm-shell-menu` to `C-c g`.

** <2025-01-30>

Improved html export backend logic

- Enhanced `org-export-before-processing` to dynamically set src block filters

** <2025-01-28>

Enhance mode-line and UI customization logic

- Improve `mode-line` color handling by dynamically adjusting inactive backgrounds based on theme brightness.
- Replace `darken-color` with `adjust-color` for versatile color adjustments.
- Refactor associated faces (e.g., `hl-line`, `vertical-border`, `tab-bar`) to align with updated color logic.
- Ensure greater visual consistency across dark and light themes.

** <2025-01-27>

Improve UI, regex handling, and autosuggestion behavior

*Popup Buffer Matching:*
- Extended `my/popper-matching-buffers` to include `.*term.*` buffers for better coverage of terminal-related buffers.

*Regex Enhancements:*
- Refined italic markdown conversion:
  - Fixed edge cases involving surrounding spaces and newlines.