@@ -21,6 +21,14 @@ Used in concert with https://github.com/captainflasmr/Emacs-core
 
 * Whats New
 
+** <2025-02-27>
+
+Improve vc-dir header to highlight current branch
+
+- Added an optional `separator` argument to customize branch display.
+- Current branch is now highlighted using text properties.
+- Default separator set to `" | "` for better readability.
+
 ** <2025-02-16>
 
 Add function to display Git branches in *vc-dir* header line
@@ -438,19 +446,24 @@ and for some vc-mode enhancements?
 lets firstly try and show the branches in =vc-dir=
 
 #+begin_src elisp
-(defun my/vc-dir-show-branches ()
-  "Show Git branches in the header line of the *vc-dir* buffer."
+(defun my/vc-dir-show-branches (&optional separator)
+  "Show Git branches in the header line of the *vc-dir* buffer, highlighting the current branch.
+If SEPARATOR is provided, it is used to separate the branches in the display."
   (when (and (boundp 'vc-dir-backend) (eq vc-dir-backend 'Git))
     (let* ((default-directory (if (boundp 'vc-dir-directory) 
                                   vc-dir-directory 
                                 default-directory))
-           (branches (replace-regexp-in-string "* " "*"
-                                               (string-join
-                                                (split-string
-                                                 (shell-command-to-string "git branch") "\n" t "\\s-*")
-                                                " "))))
-      (setq-local header-line-format 
-                  (propertize (concat "  " branches) 'face '(:inherit bold))))))
+           (branches (split-string (shell-command-to-string "git branch") "\n" t "\\s-*"))
+           (sep (or separator " | "))  ;; Default separator is " | "
+           (styled-branches (mapconcat
+                             (lambda (branch)
+                               (if (string-prefix-p "* " branch)
+                                   (propertize (concat "*" (string-trim-left branch "* "))
+                                               'face '(:weight bold))
+                                 branch))
+                             branches sep)))
+      (setq-local header-line-format
+                  (concat "  " styled-branches)))))
 
 ;; Add the function to vc-dir-mode-hook
 (add-hook 'vc-dir-mode-hook #'my/vc-dir-show-branches)
